[package]
name = "subxt-ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subxt-ipfs"

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
ipfs-api-backend-actix = "0.7.0"
log = "0.4.20"
subxt = "0.31.0"

[dev-dependencies]
reqwest = "0.11.20"
